# Insurance

./: .env.example  .gitignore  README.md  SETUP.md  STATUS.md  dashboard.html  demo-document-analysis.html  demo-fraud-dashboard.html  demo-underwriting.html  email-draft.html  index.html  policy-chat.html  requirements.txt  underwriting.html
.devcontainer/: setup.sh  (+2 more)
fraud-detection/: .env.example  .gitignore  Makefile  PYTHONANYWHERE.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt  wsgi.py
fraud-detection/scripts/: demo_typography.py  generate_synthetic.py  setup_pythonanywhere.sh
fraud-detection/src/fraud_detection/: __init__.py  cli.py  config.py  models.py  pipeline.py
fraud-detection/src/fraud_detection/api/: server.py
fraud-detection/src/fraud_detection/duplicates/: __init__.py  matcher.py  store.py
fraud-detection/src/fraud_detection/extraction/: __init__.py  fields.py
fraud-detection/src/fraud_detection/forensics/: __init__.py  embeddings.py  metadata.py  perceptual_hash.py  typography.py
fraud-detection/src/fraud_detection/ingestion/: __init__.py  loader.py
fraud-detection/src/fraud_detection/integrations/: __init__.py  flask_blueprint.py  web_app.example.py
fraud-detection/src/fraud_detection/ocr/: __init__.py  base.py  easyocr_engine.py  factory.py  tesseract_engine.py
fraud-detection/src/fraud_detection/scoring/: __init__.py  ensemble.py
fraud-detection/tests/: conftest.py  test_extraction.py  test_flask_blueprint.py  test_metadata.py  test_perceptual_hash.py  test_pipeline.py  test_store.py  test_typography.py
(+111 files in other folders)
